test/Fail/Issue1612.err
Issue1612.agda:7.1-79.14: error: [NotStrictlyPositive]
D is not strictly positive, because it occurs
in the first clause
in the definition of B0, which occurs
                       in the first clause
                       in the definition of A0, which occurs
                                              to the left of an arrow
                                              in the first clause
                                              in the definition of B0, which occurs
                                                                     in the first clause
                                                                     in the definition of
                                                                     A0, which occurs
                                                                       in the type of the
                                                                       constructor c0
                                                                       in the definition of D.
